--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My little blog about learning web components.",
   "main": ".eleventy.js",
   "dependencies": {
+    "@11ty/eleventy": "^0.5.0",
     "@11ty/eleventy-plugin-rss": "^1.0.2",
     "html-minifier": "^3.5.19"
   },
